# Rex

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  generate_phases.py
docs/: LANGUAGE.md  examples.md  index.md  performance.md  phases.md  philosophy.md  roadmap.md
docs/comparisons/: css.md  html.md  javascript.md
examples/: hello.rex
src/: lib.rs
src/ast/: mod.rs
src/cli/: mod.rs
src/codegen/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
