[package]
name = "rex"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop = "0.20"
 logos = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 clap = { version = "4.4", features = ["derive"] }
 color-eyre = "0.6"

[dev-dependencies]
trybuild = "1.0"
